--- a/bower.json
+++ b/bower.json
@@ -1,3 +1,4 @@
+
 {
   "name": "sb-admin",
   "version": "0.0.0",
@@ -8,7 +9,7 @@
     "angular-bootstrap": "~1.1.0",
     "angular-chart.js": "~0.5.2",
     "angular-cookies": "~1.5.0",
-    "angular-animate": "~1.4.8",
+    "angular-animate": "1.2.16",
     "angular-datatables": "~0.5.2",
     "angular-drag-and-drop-lists": "~1.3.0",
     "angular-editinplace": "*",
@@ -49,7 +50,8 @@
     "json3": "~3.3.1",
     "metisMenu": "~1.1.3",
     "ng-tags-input": "3.0.0",
-    "oclazyload": "~0.5.2"
+    "oclazyload": "~0.5.2",
+    "highcharts": "~4.2.3"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
